--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
 	"name": "ampl",
 	"displayName": "AMPL",
 	"description": "Run AMPL files in VS Code",
-	"version": "0.0.4",
+	"version": "0.0.1",
 	"publisher": "johan-cho",
 	"author": {
 		"name": "Johan Cho",
 		"url": "https://johan-cho.github.io"
 	},
-	"homepage": "https://github.com/Microsoft/vscode-wordcount/blob/master/README.md",
 	"license": "SEE LICENSE IN LICENSE.txt",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/kynac1/ampl"
+		"url": "https://github.com/johan-cho/ampl-vscode"
 	},
 	"icon": "./img/logo.png",
 	"engines": {
-		"vscode": "^1.20.0"
+		"vscode": "^1.22.0"
 	},
 	"categories": [
 		"Programming Languages",
@@ -31,7 +30,7 @@
 				"ampl.pathToExecutable": {
 					"type": "string",
 					"scope": "machine",
-					"default": "",
+					"default": "ampl",
 					"description": "Specifies the path to the AMPL command executable."
 				},
 				"ampl.useRelativePath": {
@@ -41,10 +40,16 @@
 					"description": "Whether to use a relative path to files when running in the console."
 				},
 				"ampl.exeArgs": {
-					"type": "array",
+					"type": "array<string>",
 					"scope": "machine",
 					"default": [],
 					"description": "an array of exe args to AMPL's executable when the console is opened."
+				},
+				"ampl.customIcons": {
+					"type": "boolean",
+					"scope": "machine",
+					"default": true,
+					"description": "Whether to use custom icons for AMPL files."
 				}
 			}
 		},
@@ -65,11 +70,13 @@
 		"commands": [
 			{
 				"command": "ampl.openConsole",
-				"title": "AMPL: Open Console"
+				"title": "AMPL: Open Console",
+				"icon": "$(terminal)"
 			},
 			{
 				"command": "ampl.runFile",
-				"title": "AMPL: Include File"
+				"title": "AMPL: Include File",
+				"icon": "$(play)"
 			}
 		],
 		"languages": [
@@ -101,6 +108,13 @@
 					"title": "AMPL: Include File",
 					"when": "editorTextFocus && editorLangId == ampl"
 				}
+			],
+			"editor/title/run": [
+				{
+					"command": "ampl.runFile",
+					"group": "navigation",
+					"when": "editorLangId == ampl"
+				}
 			]
 		},
 		"iconThemes": [
@@ -113,24 +127,24 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./ && node ./out/build.js",
+		"compile": "npm install && npm audit fix --force && tsc -p ./ && node ./out/build.js",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile",
 		"test": "node ./out/test/runTest.js",
 		"deploy": "vsce publish --yarn"
 	},
 	"devDependencies": {
-		"@types/glob": "^7.1.1",
-		"@types/mocha": "^5.2.6",
-		"@types/node": "^10.12.21",
-		"@types/vscode": "^1.20.0",
-		"glob": "^7.1.4",
-		"mocha": "^6.1.4",
-		"path": "^0.12.7",
-		"tslint": "^5.12.1",
-		"typescript": "^3.3.1",
-		"vsce": "^1.99.0",
-		"vscode-test": "^1.0.2",
-		"yarn": "^1.22.11"
+		"@types/glob": "8.1.0",
+		"@types/mocha": "10.0.6",
+		"@types/node": "20.11.14",
+		"@types/vscode": "1.85.0",
+		"glob": "10.3.10",
+		"mocha": "10.2.0",
+		"path": "0.12.7",
+		"tslint": "6.1.3",
+		"typescript": "5.3.3",
+		"vsce": "^1.97.0",
+		"vscode-test": "1.6.1",
+		"yarn": "1.22.21"
 	}
 }
