--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"compile": "npm install && npm audit fix --force && tsc -p ./ && node ./out/build.js",
+		"compile": "npm install && npx tsc -p ./ && node ./out/build.js",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile",
 		"test": "node ./out/test/runTest.js",
@@ -139,7 +139,7 @@
 		"path": "0.12.7",
 		"tslint": "6.1.3",
 		"typescript": "5.3.3",
-		"vsce": "^1.97.0",
+		"vsce": "^2.15.0",
 		"vscode-test": "1.6.1",
 		"yarn": "1.22.21"
 	}
