--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,10 +4,11 @@ env:
 extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
-parser: '@typescript-eslint/parser'
+parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 plugins:
-  - '@typescript-eslint'
+  - "@typescript-eslint"
 rules: {}
+ignorePatterns: ["node_modules/", "out/"]
