--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
 	},
 	"icon": "./img/logo.png",
 	"engines": {
-		"vscode": "^1.22.0"
+		"vscode": "^1.86.0"
 	},
 	"categories": [
 		"Programming Languages",
 		"Snippets"
+	],
+	"activationEvents": [
+		"onLanguage:ampl"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
