switch release to be back to on publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,12 @@
-# on:
-#   release:
-#     types:
-#       - published
-
 on:
-  push:
-    branches:
-      - master
+  release:
+    types:
+      - published
+
+# on:
+#   push:
+#     branches:
+#       - master
 
 name: Deploy Extension
 jobs:
