--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	},
 	"categories": [
 		"Programming Languages",
-		"Snippets"
+		"Snippets",
+		"Other"
 	],
 	"activationEvents": [],
 	"main": "./out/extension.js",
