--- a/package.json
+++ b/package.json
@@ -137,8 +137,9 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "npm install && npx tsc -p ./ && node ./out/build.js",
+		"vscode:prepublish": "npm run update && npm run compile",
+		"update": "npm install && npm update",
+		"compile": "npx tsc -p ./ && node ./out/build.js",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile",
 		"test": "node ./out/test/runTest.js",
